Fix :visited handling of nested links.

The style of an element should only depend on the closest self-including link
ancestor, but we're missing to check for that while walking the ancestors in
SelectorChecker.

BUG=793298

Change-Id: I0449a4d743f9ab1b747f69679c096e96681548ad
Reviewed-on: https://chromium-review.googlesource.com/817597
Reviewed-by: Rune Lillesveen <futhark@chromium.org>
Commit-Queue: Emilio Cobos Álvarez <emilio@chromium.org>
Cr-Commit-Position: refs/heads/master@{#523574}
Former-commit-id: fde7c48196c1742951bce3df1b0262f9b164bb3e